A jogosultságkezelés átkerült az LdapConnectorból az Authservice-be. Több apró kozmetikai változtatás is történt.